Core implementado e funcional.